# chatbot-itt-

./: package-lock.json
backend/: .gitignore  DOCUMENTACAO_API.md  Dockerfile  Makefile  README.md  agent.py  api.py  app.py  pyproject.toml  requirements.txt  vectorDB.py
backend/faiss_index/: index.faiss  index.pkl
backend/lambda/: .dockerignore  Dockerfile  Makefile  api.sh  docker.sh  main.py  requirements.txt
backend/lambda/services/: __init__.py  agent.py
backend/src/: __init__.py  api.py  dependencies.py  schemas.py
backend/src/config/: __init__.py  settings.py
backend/src/routers/: __init__.py  admin.py  chat.py
backend/src/services/: __init__.py  chains.py  google_drive.py  graph.py  vectorDB.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  Chat.tsx  Login.tsx  firebase.ts
frontend/src/components/: ListGroup.tsx
src/: Chat.tsx
