[project]
name = "chatbot-itt-backend"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-dotenv",
  "langchain",
  "langchain-core",
  "langchain-community",
  "langchain-text-splitters",
  "langchain-google-genai",
  "google-generativeai",
  "faiss-cpu",
  "pymupdf",
  "langgraph",
]
